Fixed alignfull widths for non woocommerce pages. Added screenshot

--- a/themes/tee/assets/css/block-editor.css
+++ b/themes/tee/assets/css/block-editor.css
@@ -144,7 +144,8 @@ figcaption {
 }
 
 /* Content Widths */
-.entry-content > *:not(.woocommerce), .entry-header, .entry-footer {
+.entry-content > *:not(.woocommerce, .alignfull),
+.entry-header, .entry-footer {
     max-width: 990px;
     margin-left: auto;
     margin-right: auto;
